k8s-apps/test-app/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-app
  namespace: simple-app
spec:
  selector:
    app: test-app
  ports:
    - port: 3000
      targetPort: 3000
